bulletin list button fix/ stopped flashing containers on mobile
-bullet list button works properly now
-bulletin containers dont jump around on mobile now

--- a/css/main.scss
+++ b/css/main.scss
@@ -123,6 +123,10 @@ textarea:focus,
   overflow-y: scroll;
 }
 
+.col-md-4, .col-md-8 {
+  min-height: 0px;
+}
+
 .bulletinListItem {
   list-style-type: none;
   cursor: pointer;
